<resources>
    <string name="app_name">Sudoku</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="super_easy">Super easy</string>
    <string name="main_title">SUDOKU</string>
    <string name="new_game">Nuevo juego</string>
    <string name="input_number">Numero a ingresar</string>
    <string name="textoIngresarNumero">Numero a ingresar</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="saved_games">Partidas guardadas</string>
    <string name="scores">Puntajes</string>
    <string name="difficult_level">Nivel de dificultad:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>