<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/main_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:drawableEnd="@drawable/ic_baseline_add"
        android:text="@string/new_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarLevel"
        app:layout_constraintVertical_bias="0.124" />

    <Button
        android:id="@+id/buttonSavedGames"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginTop="68dp"
        android:text="@string/saved_games"
        android:drawableEnd="@drawable/ic_baseline_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewGame" />

    <Button
        android:id="@+id/buttonScores"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginTop="80dp"
        android:text="@string/scores"
        android:drawableEnd="@drawable/ic_baseline_stars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSavedGames" />

    <SeekBar
        android:id="@+id/seekBarLevel"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:max="3"
        android:progress="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDificultad" />

    <TextView
        android:id="@+id/textViewDificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/difficult_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <TextView
        android:id="@+id/textViewLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="Mediano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toEndOf="@+id/textViewDificultad"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

</androidx.constraintlayout.widget.ConstraintLayout>